--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,33 @@
-name: Build
+name: Laravel CI/CD with SonarCloud and PHPUnit
+
 on:
-push:
-branches-ignore:
-- main
+  push:
+    branches:
+      - main
+
 jobs:
-sonarcloud:
-name: SonarCloud
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v2
-with:
-fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-- name: SonarCloud Scan
-uses: SonarSource/sonarcloud-github-action@master
-env:
-GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
-SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-tests:
-name: PHPUnit
-runs-on: ubuntu-latest
-needs: sonarcloud
-steps:
-- uses: actions/checkout@v2
-with:
-fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-- name: Validate composer.json and composer.lock
-run: composer validate --strict
-- name: Cache Composer packages
-id: composer-cache
-uses: actions/cache@v3
-with:
-path: vendor
-key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-restore-keys: |
-${{ runner.os }}-php-
-- name: Install dependencies
-run: composer install --prefer-dist --no-progress
-- name: Run tests
-run: ./vendor/bin/phpunit --verbose tests
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Laravel
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          extensions: gd, xdebug
+
+      - name: Install PHP dependencies
+        run: composer install
+
+      - name: Analyze code with SonarCloud
+        uses: sonarsource/sonarcloud-github-action@2.5
+        with:
+          sonarcloud-organization: teixeira27
+          sonarcloud-project-key: teixeira27_Natours
+          sonarcloud-token: ${{ aca9ce7c0c035f956308669933b32a00b147792a }}
+
+      - name: Run tests
+        run: php artisan test
