--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+    - name: Update Composer dependencies
+      run: composer update --no-interaction
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
     - name: Cache Composer packages
