--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
     - name: Run tests
-      run: ./vendor/bin/phpunit --verbose tests
+      run: php vendor/bin/phpunit
